# feodorov-practice-6

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client_plug.cpp  server.cpp  tests_client_plug.cpp  tests_server.cpp
.github/workflows/: build.yml  cpplint.yml  tests.yml
client/: CMakeLists.txt  client.cpp
examples/linux/: README.md  client.c  receiver.c  sender.c  server.c
examples/windows/: README.md  client.cpp  server.cpp
server/: CMakeLists.txt
tests/: CMakeLists.txt
tests/posix/: CMakeLists.txt  tests_client_plug.cpp  tests_server.cpp
tests/win32/: CMakeLists.txt  wintest.cpp
