# NB: Библиотека линкуется автоматитчески для всех целей ниже
link_libraries(wsock32 ws2_32)

################################################################################

# Файл можно править по своему усмотрению.
# Это инструкции для сборки ваших тестов на винде

### Пример цесли сборки тестового исполнимого файла
#
# add_executable(wintest wintest.cpp)

